--- a/patch/Makefile.patch
+++ b/patch/Makefile.patch
@@ -1,14 +1,23 @@
---- patch/Makefile.original	2023-02-05 10:58:39
-+++ dist/Makefile	2023-02-05 10:59:19
+--- patch/Makefile.original	2023-09-02 19:49:40
++++ dist/Makefile	2023-09-02 19:52:02
 @@ -23,7 +23,7 @@
  
- VERSION=2.1.0
+ VERSION=2.1.1
  TREE_DEST=tree
 -DESTDIR=${PREFIX}/bin
 +#DESTDIR=${PREFIX}/bin
  MAN=tree.1
  # Probably needs to be ${PREFIX}/share/man for most systems now
  MANDIR=${PREFIX}/man
+@@ -32,7 +32,7 @@
+ # Uncomment options below for your particular OS:
+ 
+ # Linux defaults:
+-CFLAGS+=-ggdb -std=c11 -pedantic -Wall -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
++#CFLAGS+=-ggdb -std=c11 -pedantic -Wall -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
+ #CFLAGS+=-O3 -std=c11 -pedantic -Wall -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
+ #LDFLAGS+=-s
+ 
 @@ -60,10 +60,12 @@
  
  # Uncomment for OS X:
